Increase default font size for better readability; Avoid text overflow in post content

--- a/src/assets/stylesheets/frontend/components/post.scss
+++ b/src/assets/stylesheets/frontend/components/post.scss
@@ -22,6 +22,8 @@
 }
 
 .post-content {
+  word-wrap: break-word;
+
   img {
     max-width: 100%;
     vertical-align: middle;
